--- a/eGuide/eGuide.AdminAPI/eGuide.Service.AdminAPI.csproj
+++ b/eGuide/eGuide.AdminAPI/eGuide.Service.AdminAPI.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Business.Concrete\eGuide.Business.Concrete.csproj" />
+  </ItemGroup>
+
 </Project>
