--- a/eGuide/eGuide.Common/eGuide.Common.csproj
+++ b/eGuide/eGuide.Common/eGuide.Common.csproj
@@ -10,4 +10,13 @@
     <Folder Include="Mappers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+  </ItemGroup>
+
 </Project>
