--- a/eGuide/eGuide.Data.Context/eGuide.Data.Context.csproj
+++ b/eGuide/eGuide.Data.Context/eGuide.Data.Context.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Common\eGuide.Common.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+  </ItemGroup>
+
 </Project>
