--- a/eGuide/eGuide.Infrastructure.Conctrete/eGuide.Infrastructure.Conctrete.csproj
+++ b/eGuide/eGuide.Infrastructure.Conctrete/eGuide.Infrastructure.Conctrete.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Data.Context\eGuide.Data.Context.csproj" />
+    <ProjectReference Include="..\eGuide.Infrastructure.Infrastructure\eGuide.Infrastructure.Interface.csproj" />
+  </ItemGroup>
+
 </Project>
