--- a/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
+++ b/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
+  </ItemGroup>
+
 </Project>
