--- a/eGuide/eGuide.AdminAPI/eGuide.Service.AdminAPI.csproj
+++ b/eGuide/eGuide.AdminAPI/eGuide.Service.AdminAPI.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
@@ -16,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eGuide.Business.Concrete\eGuide.Business.Concrete.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Context\eGuide.Data.Context.csproj" />
   </ItemGroup>
 
 </Project>
