--- a/eGuide/eGuide.Service.ClientAPI/appsettings.json
+++ b/eGuide/eGuide.Service.ClientAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eGuideContext": "server=ABCZT-3;database=eGuideDB;trusted_connection=true;trustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
