--- a/eGuide/eGuide.Service.ClientAPI/eGuide.Service.ClientAPI.csproj
+++ b/eGuide/eGuide.Service.ClientAPI/eGuide.Service.ClientAPI.csproj
@@ -21,11 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Business.Concrete\eGuide.Business.Concrete.csproj" />
+    <ProjectReference Include="..\eGuide.Business.Interface\eGuide.Business.Interface.csproj" />
     <ProjectReference Include="..\eGuide.Data.Context\eGuide.Data.Context.csproj" />
+    <ProjectReference Include="..\eGuide.Infrastructure.Conctrete\eGuide.Infrastructure.Conctrete.csproj" />
   </ItemGroup>
 
 </Project>
