--- a/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
+++ b/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
