--- a/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
+++ b/eGuide/eGuide.Infrastructure.Infrastructure/eGuide.Infrastructure.Interface.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+  </ItemGroup>
+
 </Project>
