--- a/eGuide/eGuide.Infrastructure.Conctrete/eGuide.Infrastructure.Conctrete.csproj
+++ b/eGuide/eGuide.Infrastructure.Conctrete/eGuide.Infrastructure.Conctrete.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
+    <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
 
