MongoDB , UserVehicle configuration

--- a/eGuide/eGuide.AdminAPI/appsettings.json
+++ b/eGuide/eGuide.AdminAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eGuideContext": "server=DESKTOP-H4FB28Q\\SQLEXPRESS;database=eGuideDB;trusted_connection=true;trustServerCertificate=true"
+    "eGuideContext": "server=ABCZT-3;database=eGuideDB;trusted_connection=true;trustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
