--- a/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
+++ b/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eGuide.Data.Dto\eGuide.Data.Dto.csproj" />
     <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
   </ItemGroup>
 
