Service name changed to Services and Entitis changed to Entities

--- a/eGuide/eGuide.Common/eGuide.Common.csproj
+++ b/eGuide/eGuide.Common/eGuide.Common.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eGuide.Data.Dto\eGuide.Data.Dto.csproj" />
-    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entities.csproj" />
   </ItemGroup>
 
 </Project>
