--- a/eGuide/eGuide.Data.Context/eGuide.Data.Context.csproj
+++ b/eGuide/eGuide.Data.Context/eGuide.Data.Context.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eGuide.Common\eGuide.Common.csproj" />
-    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entities.csproj" />
   </ItemGroup>
 
 </Project>
