--- a/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
+++ b/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eGuide.Data.Dto\eGuide.Data.Dto.csproj" />
-    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entities.csproj" />
   </ItemGroup>
 
 </Project>
