--- a/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
+++ b/eGuide/eGuide.Business.Interface/eGuide.Business.Interface.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entities.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entites.csproj" />
   </ItemGroup>
 
 </Project>
