--- a/eGuide/eGuide.Business.Concrete/eGuide.Business.Concrete.csproj
+++ b/eGuide/eGuide.Business.Concrete/eGuide.Business.Concrete.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\eGuide.Business.Interface\eGuide.Business.Interface.csproj" />
+    <ProjectReference Include="..\eGuide.Data.Entites\eGuide.Data.Entities.csproj" />
     <ProjectReference Include="..\eGuide.Infrastructure.Infrastructure\eGuide.Infrastructure.Interface.csproj" />
   </ItemGroup>
 
